# Deadlock-Mod-Merger

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
scripts/: build.js  parity.mjs  verify.mjs
src/: merge.js  server.js  vpk.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  merge.rs  state.rs  vpk.rs
ui/: app.js  index.html  style.css
web/: app.js  index.html
